# gerenciador-estoque

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Html/: Cadastro.css  Cadastro.html  Cadastro.js  Inventario.css  Inventario.html  Inventario.js  Login.css  Login.html  Login.js
Html/TesteBlackbox/: cadastro.html  index.html  inventario.html  scripts.js  styles.css
app/: create_all_tables.py  main.py
app/api/: api.py
app/api/endpoints/: products.py  users.py
app/core/: auth.py  configs.py  database.py  deps.py  security.py
app/models/: all_models.py  products_model.py  users_model.py
app/schemas/: products_schema.py  users_schema.py
app/services/: validate_user_exists.py
tests/: conftest.py  test_app.py  utils.py
tests/products/: test_products.py
tests/users/: test_users.py
